Refactor tournament handling and statistics components
- Removed GoogleSportsMatchStats component as it is no longer needed.
- Updated Header component to remove season selection dropdown, moving it to the homepage.
- Refactored LeagueTable and LiveMatches components to use new tournament context.
- Introduced useMatchesByStatus hook for better match status management.
- Created useTournamentContext hook for accessing tournament data from context.
- Enhanced SimpleLayout to manage tournament selection and context.
- Improved error handling in useTournaments and useTournamentData hooks.
- Added smart tournament selection logic in dataUtils.
- Updated API types to include new tournament properties.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#15350A",
-        "titleBar.activeBackground": "#1D4A0D",
+        "activityBar.background": "#0a2935",
+        "titleBar.activeBackground": "#0d3f4a",
         "titleBar.activeForeground": "#F4FCF2"
     }
 }
