feat: Add ParticleBackground component for dynamic particle effects
refactor: Simplify SimpleLayout component and improve layout rendering

feat: Implement StatisticsCharts component for displaying tournament statistics

feat: Create TournamentDataContext for centralized tournament data management

feat: Add performance optimization hooks for data prefetching and monitoring

refactor: Update useTournamentContext to utilize new TournamentDataContext

fix: Adjust API service to include announcement and user endpoints

style: Revamp theme for a clean sports aesthetic with improved color palette

feat: Define new types for User and Announcement in API types

--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "@mui/material": "^7.3.2",
     "@mui/material-nextjs": "^7.3.2",
     "@mui/x-data-grid": "^8.11.1",
+    "@tsparticles/engine": "^3.9.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.9.1",
+    "apexcharts": "^5.3.5",
+    "framer-motion": "^12.23.22",
     "next": "15.5.2",
     "react": "19.1.0",
+    "react-apexcharts": "^1.7.0",
     "react-dom": "19.1.0"
   },
   "devDependencies": {
