--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next": "15.5.2",
     "react": "19.1.0",
     "react-apexcharts": "^1.7.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "vanilla-cookieconsent": "^3.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
